--- a/Topseal-website/html/signup.html
+++ b/Topseal-website/html/signup.html
@@ -146,6 +146,14 @@
           </div>
 
           <div class="">
+            <label for="what">What do you want to do on Topseal?</label>
+            <select name="" id="">
+              <option value="">Read Articles</option>
+              <option value="">Write Blog Articles</option>
+            </select>
+          </div>
+
+          <div class="">
             <label for="password">Password<span>*</span> </label>
             <input type="password" name="password" />
           </div>
